# diva-gitpod

./: README.md  diva_env.yml  start_session
assets/allvall-200-good/: X-Ray Tool G7 v0.0.3a.html
docs/ieeeconf/: macrosv2.tex  root.aux  root.bbl  root.blg  root.tex  stewart.bib
src/: Untitled.ipynb  activate_pydrake.sh  anthropometric_data_diva.ods  urdftest1128mitmesh.urdf
src/.ipynb_checkpoints/: Tangibility_robot-checkpoint.ipynb
src/CMA-ES/: CMAES_opt.ipynb  activate_pydrake.sh  diva_ADG-22-02-21-Baseline-Control-Motor.ipynb  diva_ADG-22-02-21-Baseline-Control.ipynb  diva_ADG-22-02-21-Baseline.ipynb  timeOpt.nb
src/DIVAR3V/: DIVAR3V-DE.ipynb  DIVAR3V-pagmo_error.ipynb  DIVAR3V-prob07-simp_bounds.ipynb  DIVAR3V-prob08.ipynb  TwoLink_urdf_creator_struct.py  feasibility_classifier.pkl  mass_estimator.onnx  rough work.ipynb  test.pickle  urdf_creator.py  urdf_creator_struct.py  urdf_creator_struct_all.py
src/DIVAR3V-cpp/: CMakeLists.txt  CMakeLists_working _lclc.txt
src/DIVAR3V-cpp/src/: divar3v.cc  divar3v.h
src/DIVAR3V-cpp/src/urdfs/: iCubGenova04_drake_stl.urdf
src/Meta_Models_21-12-15/: Stiffness_Mass_Requirement.m  mass_estimator.pth  mean_and_scale.json
src/Tangibility/: Tangibility_robot.ipynb  mesh_convertor.ipynb
src/Tangibility/URDFModelTang/: CMakeLists.txt  package.xml
src/Tangibility/URDFModelTang/launch/: display.launch  gazebo.launch
src/Tangibility/URDFModelTang/meshes/: Fifthlink.STL  Firstlink.STL  Secondlink.STL  Sixthlink.STL  Thirdlink.STL
src/Tangibility/URDFModelTang/scripts/: manipulator.py
src/Tangibility/URDFModelTang/urdf/: URDFModelTang.csv  URDFModelTang.urdf
src/Tangibility/URDF_Model_22-02-28/: CMakeLists.txt  package.xml
src/Tangibility/URDF_Model_22-02-28/launch/: display.launch  gazebo.launch
src/Tangibility/URDF_Model_22-02-28/meshes/: Fourthlink.STL  Secondlink.STL  Sixthlink.STL
src/Tangibility/URDF_Model_22-02-28/urdf/: URDF_Model_22-02-28.csv  URDF_Model_22-02-28.urdf
src/TwoLinkRobot/: TwoLinkRobot-Optim-all-MAIN-control.ipynb  TwoLinkRobot-Optim-all-MAIN-prob01.ipynb  TwoLinkRobot-Optim-all-MAIN-prob02.ipynb  TwoLinkRobot-Optim-all-MAIN-prob03.ipynb  TwoLinkRobot-Optim-all-MAIN.ipynb  TwoLink_urdf_creator.py  prob01.py
src/arc/: DIVA_R1.1.3_21-12-01.nb  (+1 more)
(+408 files in other folders)
